[DEV] Added staged cup_deploy and cup_inspect command support

--- a/docs/Release_Notes.txt
+++ b/docs/Release_Notes.txt
@@ -44,7 +44,7 @@ Ansible Plugin for Intel(R) SDP Tool
                 II. ISO or IMG file path
             sup_path: SUP directory path for update, command - update
             custom_sup_path: SUP directory path for custom_deploy, command - custom_deploy
-            cup_path: CUP zip path for cup_deploy, command - cup_deploy
+            cup_path: CUP zip path for cup_deploy and cup_inspect, command - cup_deploy, cup_inspect
 
     3. Playbook (test.yaml):
         a. Intro:
